--- a/src/vector/index.html
+++ b/src/vector/index.html
@@ -57,7 +57,8 @@
             <link rel="preload" as="font" href="<%= path %>" crossorigin="anonymous"/>
         <% }
     } %>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body
       style="height: 100%; margin: 0;"
